--- a/index.html
+++ b/index.html
@@ -1,276 +1,196 @@
-<!DOCTYPE html>
-
+<!DOCTYPE HTML>
+<!--
+	Prologue by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-  <head>
-    <title>James Cuénod · Github Repositories</title>
-	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-    <link rel="stylesheet" type="text/css" href="assets/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/grid.css">
-    <link rel="stylesheet" type="text/css" href="assets/style.css">
-    <link href="//abs.twimg.com/favicons/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <script type="text/javascript">
+	<head>
+		<title>Prologue by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<script src="assets/js/temp.js"></script>
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body>
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-39101739-1']);
-  _gaq.push(['_trackPageview']);
+		<!-- Header -->
+			<div id="header">
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+				<div class="top">
 
-    </script>
-    <script type="text/javascript" src="assets/jquery-1.7.1.min.js"></script>
-    <script type="text/javascript" src="assets/strftime.js"></script>
-    <script type="text/javascript">
-    (function ($, undefined) {
+					<!-- Logo -->
+						<div id="logo">
+							<span class="image avatar48"><img src="images/profile.png" alt="" /></span>
+							<h1 id="title">James Cuénod</h1>
+							<p>Sub-creator, the refracted light</p>
+						</div>
 
-      // Put custom repo URL's in this object, keyed by repo name.
-      var repoUrls = {
-        "bootstrap": "http://twitter.github.com/bootstrap/",
-        "finagle": "http://twitter.github.com/finagle/",
-        "hogan.js": "http://twitter.github.com/hogan.js/"
-      };
+					<!-- Nav -->
+						<nav id="nav">
+							<ul>
+								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Intro</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Portfolio</span></a></li>
+								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
+								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li>
+							</ul>
+						</nav>
 
-      function repoUrl(repo) {
-        return repoUrls[repo.name] || repo.html_url;
-      }
+				</div>
 
-      // Put custom repo descriptions in this object, keyed by repo name.
-      var repoDescriptions = {
-        "bootstrap": "An HTML, CSS, and JS toolkit designed to kickstart development of webapps and sites",
-        "naggati2": "A protocol builder for Netty using Scala 2.8"
-      };
+				<div class="bottom">
 
-      function repoDescription(repo) {
-        return repoDescriptions[repo.name] || repo.description;
-      }
+					<!-- Social Icons -->
+						<ul class="icons">
+							<li><a href="https://twitter.com/intent/follow?screen_name=jamescuenod" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+							<li><a href="https://stackoverflow.com/users/123415/jcuenod" class="icon fa-stack-overflow" target="_blank"><span class="label">Stack Overflow</span></a></li>
+							<li><a href="https://github.com/jcuenod" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
+						</ul>
 
-      function addRecentlyUpdatedRepo(repo) {
-        var $item = $("<li>");
+				</div>
 
-        var $name = $("<a>").attr("href", repo.html_url).text(repo.name);
-        $item.append($("<span>").addClass("name").append($name));
+			</div>
 
-        var $time = $("<a>").attr("href", repo.html_url + "/commits").text(strftime("%h %e, %Y", repo.pushed_at));
-        $item.append($("<span>").addClass("time").append($time));
+		<!-- Main -->
+			<div id="main">
 
-        $item.append('<span class="bullet">&sdot;</span>');
+				<!-- Intro -->
+					<section id="top" class="one dark cover">
+						<div class="container">
 
-        var $watchers = $("<a>").attr("href", repo.html_url + "/watchers").text(repo.watchers + " stargazers");
-        $item.append($("<span>").addClass("watchers").append($watchers));
+							<header>
+								<h2 class="alt">Hi! I'm <strong>James</strong>, a <a href="http://www.urbandictionary.com/define.php?term=Nerdy">nerdy</a> nerd<br />
+								who weilds technology to exegetical ends.</h2>
+								<p>
+									Coding is both how I subdue creation and how I exercise<br />
+									the creative impulse that echoes in me after the image of my Creator.
+								</p>
+								<p>
+									That is, to paraphrase Eric Lidell,<br />
+									<i>God made me program. And when I code, I feel His pleasure.</i>
+								</p>
+							</header>
 
-        $item.append('<span class="bullet">&sdot;</span>');
+							<footer>
+								<a href="#portfolio" class="button scrolly">See what I've been doing</a>
+							</footer>
 
-        var $forks = $("<a>").attr("href", repo.html_url + "/network").text(repo.forks + " forks");
-        $item.append($("<span>").addClass("forks").append($forks));
+						</div>
+					</section>
 
-        $item.appendTo("#recently-updated-repos");
-      }
+				<!-- Portfolio -->
+					<section id="portfolio" class="two">
+						<div class="container">
 
-      function addRepo(repo) {
-        var $item = $("<li>").addClass("repo grid-1 " + (repo.language || '').toLowerCase());
-        var $link = $("<a>").attr("href", repoUrl(repo)).appendTo($item);
-        $link.append($("<h2>").text(repo.name));
-        $link.append($("<h3>").text(repo.language));
-        $link.append($("<p>").text(repoDescription(repo)));
-        $item.appendTo("#repos");
-      }
+							<header>
+								<h2>Portfolio</h2>
+							</header>
 
-      function addRepos(repos, page) {
-        repos = repos || [];
-        page = page || 1;
+							<p class="sorep">
+								<a href="https://stackoverflow.com/users/123415/jcuenod">StackOverflow:</a>
+								<span class="reputation">12,000</span>
+								<span class="badge gold">5</span>
+								<span class="badge silver">29</span>
+								<span class="badge bronze">62</span>
+							</p>
 
-        var uri = "https://api.github.com/users/jcuenod/repos?callback=?"
-                + "&per_page=100"
-                + "&page="+page;
+							<ol id="repos"></ol>
+						</div>
+					</section>
 
-        $.getJSON(uri, function (result) {
-          if (result.data && result.data.length > 0) {
-            repos = repos.concat(result.data);
-            addRepos(repos, page + 1);
-          }
-          else {
-            $(function () {
-              $("#num-repos").text(repos.length);
+				<!-- About Me -->
+					<section id="about" class="three">
+						<div class="container">
 
-              // Convert pushed_at to Date.
-              $.each(repos, function (i, repo) {
-                repo.pushed_at = new Date(repo.pushed_at);
+							<header>
+								<h2>About Me</h2>
+							</header>
 
-                var weekHalfLife  = 1.146 * Math.pow(10, -9);
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-                var pushDelta    = (new Date) - Date.parse(repo.pushed_at);
-                var createdDelta = (new Date) - Date.parse(repo.created_at);
+							<p>My name is <a href="mailto:j3frea@gmail.com">James Cuénod</a>, I'm a millenial so I guess that means technology is par for the course. I started programming when I was barely a teenager though (which is overzealous if you want friends in highschool - but I discovered that too late).
+							</p>
+							<p>
+								Now coding is a way of life and I don't know how I would survive if I couldn't.
+							</p>
+							<p>
+								I just learn whatever I think looks interesting. I started with QBasic, progressed through Visual Basic to Java and have had some fun with Android. Along the way I picked up HTML and CSS (when it was still busy revolutionising table layouts) and Javascript. JQuery changed my life and although I had fun with PHP (and Drupal and then Wordpress), Rails threatens to undo my appreciation for PHP.
+							</p>
+							<p>
+								How coding fits into my understanding of life the universe and everything is an interesting question. It's really a theological question because theology is where you find those sorts of answers (unless you want "42," in which case grab a towel). I think of my theological answer, in non-theological language, in terms that Tolkien puts better than I do.
+							</p>
+							<p>
+								In his poem <a href="https://en.wikipedia.org/wiki/Mythopoeia_(poem)">Mythopoiea</a>, Tolkien speaks of the mistake humanity (the lords of creation) makes when we worship what we make but how making things is still a critical aspect of being human.
+							</p>
+							<p><i>Dis-graced he may be, yet is not dethroned,<br />
+							and keeps the rags of lordship once he owned,<br />
+							his world-dominion by creative act:<br />
+							not his to worship the great Artefact,<br />
+							Man, Sub-creator, the refracted light<br />
+							through whom is splintered from a single White<br />
+							to many hues, and endlessly combined<br />
+							in living shapes that move from mind to mind.</i></p>
+						</div>
+					</section>
 
-                var weightForPush = 1;
-                var weightForWatchers = 1.314 * Math.pow(10, 7);
+				<!-- Contact -->
+					<section id="contact" class="four">
+						<div class="container">
 
-                repo.hotness = weightForPush * Math.pow(Math.E, -1 * weekHalfLife * pushDelta);
-                repo.hotness += weightForWatchers * repo.watchers / createdDelta;
-              });
+							<header>
+								<h2>Contact</h2>
+							</header>
 
-              // Sort by highest # of watchers.
-              repos.sort(function (a, b) {
-                if (a.hotness < b.hotness) return 1;
-                if (b.hotness < a.hotness) return -1;
-                return 0;
-              });
+							<p>If you want to get hold of me for whatever reason, fill out the form, hit submit and voila.</p>
 
-              $.each(repos, function (i, repo) {
-                addRepo(repo);
-              });
+							<form method="post" action="http://formspree.io/j3frea+formspree@gmail.com">
+								<div class="row">
+									<div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
+									<div class="6u$ 12u$(mobile)"><input type="text" name="email" placeholder="Email" /></div>
+									<div class="12u$">
+										<textarea name="message" placeholder="Message"></textarea>
+									</div>
+									<div class="12u$">
+										<input type="submit" value="Send Message" />
+									</div>
+								</div>
+							</form>
 
-              // Sort by most-recently pushed to.
-              repos.sort(function (a, b) {
-                if (a.pushed_at < b.pushed_at) return 1;
-                if (b.pushed_at < a.pushed_at) return -1;
-                return 0;
-              });
+						</div>
+					</section>
 
-              $.each(repos.slice(0, 3), function (i, repo) {
-                addRecentlyUpdatedRepo(repo);
-              });
-            });
-          }
-        });
-      }
-      addRepos();
+			</div>
 
-      //get total number of Twitter members
-    //   function getNumMembers(page, numMembers) {
-    //     var page = page || 1;
-    //     var numMembers = numMembers || 0;
-    //     var membersUri = "https://api.github.com/users/jcuenod/members?callback=?"
-    //       + "&per_page=100"
-    //       + "&page="+page;
-      //
-    //     $.getJSON(membersUri, function (result) {
-    //       if (result.data && result.data.length > 0) {
-    //         numMembers += result.data.length;
-    //         getNumMembers(page+1, numMembers);
-    //       } else {
-    //         $(function () {
-    //           $("#num-members").text(numMembers);
-    //         });
-    //       }
-    //     });
-    //   }
-    //   getNumMembers();
+		<!-- Footer -->
+			<div id="footer">
 
-    //   function randomItem(array) {
-    //     return array[Math.floor(Math.random() * array.length)];
-    //   }
-      //
-    //   var $flyzone;
-      //
-    //   function flyzone() {
-    //     if (!$flyzone) {
-    //       $flyzone = $("<div>").attr("id", "flyzone").prependTo(document.body);
-    //     }
-      //
-    //     return $flyzone;
-    //   }
-      //
-    //   var sizes = ["smaller", "small", "medium", "large", "fat"];
-      //
-    //   var sizeDimensions = {
-    //     "smaller": 50,
-    //     "small": 80,
-    //     "medium": 130,
-    //     "large": 200,
-    //     "fat": 300
-    //   };
-      //
-    //   function randomOpacity(threshold) {
-    //     var opacity = Math.random();
-      //
-    //     while (opacity < threshold) {
-    //       opacity = Math.random();
-    //     }
-      //
-    //     return opacity;
-    //   }
+				<!-- Copyright -->
+					<ul class="copyright">
+						<li>Copyright &copy; 2016 James Cuénod. All rights reserved.</li>
+					</ul>
 
-    //   function makeLarry(sizeName, speed) {
-    //     var size = sizeDimensions[sizeName];
-    //     var top = Math.floor((flyzone().height() - size) * Math.random());
-      //
-    //     var $img = $("<img>")
-    //       .addClass("larry size-" + sizeName)
-    //       .attr("src", "assets/larry.png")
-    //       .attr("width", size)
-    //       .attr("height", size)
-    //       .css({
-    //         position: "absolute",
-    //         opacity: randomOpacity(0.4),
-    //         top: top,
-    //         left: -size
-    //       });
-      //
-    //     $img.prependTo(flyzone());
-      //
-    //     var left = flyzone().width() + size;
-      //
-    //     $img.animate({left: left}, speed, function () {
-    //       $img.remove();
-    //       makeRandomLarry();
-    //     });
-      //
-    //     return $img;
-    //   }
-      //
-    //   function makeRandomLarry() {
-    //     var size = randomItem(sizes);
-    //     var speed = Math.floor(Math.random() * 20000) + 15000;
-    //     return makeLarry(size, speed);
-    //   }
-      //
-    //   $(function () {
-    //     $("#logo").click(function () {
-    //       makeRandomLarry();
-    //     });
-    //   });
+			</div>
 
-    //   var match = (/\blarry(=(\d+))?\b/i).exec(window.location.search);
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.scrollzer.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/strftime.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
 
-    //   if (match) {
-    //     var n = parseInt(match[2]) || 20;
-      //
-    //     $(function () {
-    //       for (var i = 0; i < n; ++i) {
-    //         setTimeout(makeRandomLarry, Math.random() * n * 500);
-    //       }
-    //     });
-    //   }
-    })(jQuery);
-    </script>
-  </head>
-  <body>
-    <div id="wrapper" class="grid clearfix">
-      <div id="main" class="grid-1">
-        <div id="logo"><h1>James Cuénod</h1></div>
-        <p>Christian tech enthusiast wielding computers for exegesis (and fun).</p>
-        <p>Twitter <a href="https://twitter.com/jamescuenod">@jamescuenod</a></p>
-        <p>Theology Blog: <a href="https://www.rekindle.co.za">Rekindle</a></p>
-      </div>
-
-      <div class="grid grid-3">
-        <div id="statistics" class="grid-1 alpha header">
-          <h1>Statistics</h1>
-          <p>
-            <a href="https://github.com/jcuenod/"><span id="num-repos"><img src="assets/spinner.gif" /></span> public repos</a>
-          </p>
-        </div>
-
-        <div id="recently-updated" class="grid-2 omega header">
-          <h1>Recently updated <a href="https://github.com/jcuenod/repositories">View All on GitHub</a></h1>
-          <ol id="recently-updated-repos"></ol>
-        </div>
-      </div>
-
-      <ol id="repos"></ol>
-    </div>
-  </body>
+			<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			ga('create', 'UA-73720535-1', 'auto');
+			ga('send', 'pageview');
+			</script>
+	</body>
 </html>
