--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
 				<!-- Copyright -->
 					<ul class="copyright">
 						<li>Copyright &copy; 2016 James Cuénod. All rights reserved.</li>
+						<li>Kudos to <a href="html5up.net/prologue" rel="nofollow">HTML5up for the template.</a></li>
 					</ul>
 
 			</div>
