--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -61,5 +61,5 @@ permalink: /projects/
   </div><!-- grid -->
 </div>
 
-<script src="assets/js/zepto.min.js"></script>
-<script src="assets/js/programmingportfolio.js"></script>
+<script src="/assets/js/zepto.min.js"></script>
+<script src="/assets/js/programmingportfolio.js"></script>
