--- a/_pages/biblical.html
+++ b/_pages/biblical.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: Work
-subtitle: Happy users, happy clients.
-desc: Happy users, happy clients.
-permalink: /work/
+title: Biblical Studies
+subtitle: Biblical studier by day
+desc: Biblical studier by day
+permalink: /biblical/
 ---
 
 <p>Mea speciem facta postquam quae ab catulo, bracchia nepotis: est. Suae <strong>posset cingebant</strong> patris</p>
