--- a/_pages/software.html
+++ b/_pages/software.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: Projects
-subtitle: Side projects are fun.
-desc: Side projects are fun.
-permalink: /projects/
+title: Software Engineering
+subtitle: Hobbyist software engineer by night
+desc: Hobbyist software engineer by night
+permalink: /software/
 ---
 
 <p>Lorem markdownum liquidas. Ad qui saxo prodis una, dextra medicamina fremit voce, Iuppiter, sum morte, et. Est hos est vultum ocius dextra praetulit aequoris hominem.</p>
