--- a/_pages/software.html
+++ b/_pages/software.html
@@ -8,6 +8,7 @@ permalink: /software/
 
 <p>Lorem markdownum liquidas. Ad qui saxo prodis una, dextra medicamina fremit voce, Iuppiter, sum morte, et. Est hos est vultum ocius dextra praetulit aequoris hominem.</p>
 
+# Stackoverflow Reputation
 <p class="sorep">
   <a href="https://stackoverflow.com/users/123415/jcuenod">StackOverflow:</a>
   <span class="reputation">12,000</span>
@@ -16,6 +17,7 @@ permalink: /software/
   <span class="badge bronze">62</span>
 </p>
 
+# My Github Repositories
 <div class="projects">
 </div>
 
