Fixed some styling issues

--- a/_pages/software.html
+++ b/_pages/software.html
@@ -8,16 +8,16 @@ permalink: /software/
 
 <p>Lorem markdownum liquidas. Ad qui saxo prodis una, dextra medicamina fremit voce, Iuppiter, sum morte, et. Est hos est vultum ocius dextra praetulit aequoris hominem.</p>
 
-# Stackoverflow Reputation
+<h2>StackOverflow Reputation</h2>
 <p class="sorep">
-  <a href="https://stackoverflow.com/users/123415/jcuenod">StackOverflow:</a>
-  <span class="reputation">12,000</span>
+  <a href="https://stackoverflow.com/users/123415/jcuenod">Profile:</a>
+  <span class="reputation">19,000</span>
   <span class="badge gold">5</span>
-  <span class="badge silver">29</span>
-  <span class="badge bronze">62</span>
+  <span class="badge silver">44</span>
+  <span class="badge bronze">79</span>
 </p>
 
-# My Github Repositories
+<h2>Github Repositories</h2>
 <div class="projects">
 </div>
 
