--- a/labs/index.html
+++ b/labs/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+<title>Psalms Overview</title>
+<link rel="icon" type="image/png" href="./lab_icon.png" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <style type="text/css">
 .block, .placeholder {
