--- a/labs/index.html
+++ b/labs/index.html
@@ -13,11 +13,15 @@
 	overflow: hidden;
 	text-align: center;
 	color: #aaf;
-	padding-top: 3px;
+	padding-top: 6px;
 	box-sizing: border-box;
+	border-radius: 2px;
+	font-size: 11px;
+	font-family: sans-serif;
+	font-weight: bold;
 }
 .block:hover, .block.highlight {
-	background: #e43;
+	background: #f54;
 	color: #fff;
 	cursor: pointer;
 }
@@ -39,6 +43,11 @@
 #dataContainer .heading {
 	font-family: sans-serif;
 	border-bottom: 1px solid black;
+	cursor: pointer;
+}
+#dataContainer .heading:hover {
+	color: #d00;
+	font-weight: bold;
 }
 .data {
 	margin: 5px;
@@ -124,12 +133,12 @@
 				// ALL THIS DATA IS FROM http://www.crivoice.org/psalmtypes.html
 				lament: {
 					//89
-					"Community lament": [12, 44, 58, 60, 74, 79, 80, 83, 85, 89, 90, 94, 123, 126, 129],
+					"Community": [12, 44, 58, 60, 74, 79, 80, 83, 85, 89, 90, 94, 123, 126, 129],
 					//27, 36, 52, 89
-					"Individual lament":	[3, 4, 5, 7, 9, 10, 13, 14, 17, 22, 25, 26, 27, 28, 31, 36, 39, 40, 41, 42, 43, 52, 53, 54, 55, 56, 57, 59, 61, 64, 70, 71, 77, 86, 89, 120, 139, 141, 142],
+					"Individual":	[3, 4, 5, 7, 9, 10, 13, 14, 17, 22, 25, 26, 27, 28, 31, 36, 39, 40, 41, 42, 43, 52, 53, 54, 55, 56, 57, 59, 61, 64, 70, 71, 77, 86, 89, 120, 139, 141, 142],
 					// 32
 					"Penitential": [6, 32, 38, 51, 102, 130, 143],
-					"Imprecatory Lament": [35, 69, 83, 88, 109, 137, 140]
+					"Imprecatory": [35, 69, 83, 88, 109, 137, 140]
 				},
 				thanksgiving: {
 					//65,67,136
@@ -176,7 +185,13 @@
 
 			const mapOfContainers = []
 			Object.keys(metadata).forEach(m => {
-				$("#dataContainer").append($("<div>").addClass("heading").text(m))
+				const heading = $("<div>").addClass("heading").text(m)
+				heading.hover(() => {
+					highlightFor(Object.keys(metadata[m]).reduce((a,c) => a.concat(...metadata[m][c]), []))
+				}, () => {
+					unHighlightFor(Object.keys(metadata[m]).reduce((a,c) => a.concat(...metadata[m][c]), []))
+				})
+				$("#dataContainer").append(heading)
 				Object.keys(metadata[m]).forEach(f => {
 					const s = $("<div>").addClass("data").text(f).hover(() => {
 						highlightFor(metadata[m][f])
