--- a/labs/layout.html
+++ b/labs/layout.html
@@ -24,6 +24,7 @@
             grid-area: header;
 
             /* Stick header to top of grid */
+            position: -webkit-sticky
             position: sticky;
             top: 0;
             /* Ensure header appears on top of content/sidebars */
@@ -47,6 +48,7 @@
         .footer {
             grid-area: footer;
             /* Stick footer to bottom of grid */
+            position: -webkit-sticky
             position: sticky;
             bottom: 0;
 
