Updated date of phd

--- a/_pages/biblical.html
+++ b/_pages/biblical.html
@@ -7,7 +7,7 @@ permalink: /biblical/
 items:
   - title: "PhD Biblical & Theological Studies: Old Testament"
     link: #
-    date: 2020-05-20
+    date: (in progress)
     desc: Wheaton College, Wheaton, IL
   - title: MA Biblical Exegesis
     link: #
