Swapped heading and description for publications and presentations

--- a/_pages/biblical.html
+++ b/_pages/biblical.html
@@ -25,16 +25,16 @@ sections:
       desc: George Whitefield College, Cape Town, South Africa
   - title: Publications
     items:
-    - title: Neotestamentica 49.2
+    - title: Review of Ian Boxall's "Discovering Mathew"
       link: #
       date: 2015-01-01
-      desc: Review of Ian Boxall's "Discovering Mathew"
+      desc: Neotestamentica 49.2
   - title: Conference Presentations
     items:
-    - title: ETS Regional Conference (Midwest)
+    - title: An Investigation into the Use of ‫ירא‬ in Deuteronomy and its Correspondence with the NT Idea of Faith
       link: #
       date: 2016-03-11
-      desc: An Investigation into the Use of ‫ירא‬ in Deuteronomy and its Correspondence with the NT Idea of Faith
+      desc: ETS Regional Conference (Midwest)
 
 ---
 
