Added awards and separator element

--- a/_pages/biblical.html
+++ b/_pages/biblical.html
@@ -35,6 +35,20 @@ sections:
       link: #
       date: 2016-03-11
       desc: ETS Regional Conference (Midwest)
+  - title: Awards
+    items:
+    - title: Schultz Award in Old Testament Studies
+      link: #
+      date: 2017-05-20
+      desc: 
+    - title: Alpha Beta Rho Hebrew Award
+      link: #
+      date: 2016-05-20
+      desc: 
+    - title: 2nd Place ETS Regional Student Paper Competition
+      link: #
+      date: 2016-03-11
+      desc: An Investigation into the Use of ‫ירא‬ in Deuteronomy and its Correspondence with the NT Idea of Faith
 
 ---
 
@@ -64,4 +78,6 @@ sections:
     </li>
     {% endfor %}
   </ul>
+  
+  <hr />
 {% endfor %}
