--- a/_pages/biblical.html
+++ b/_pages/biblical.html
@@ -35,6 +35,10 @@ sections:
       link: #
       date: 2016-03-11
       desc: ETS Regional Conference (Midwest)
+    - title: Searching the Bible Using NLP: Google for the Hebrew Bible
+      link: #
+      date: 2019-11-23
+      desc: SBL National, San Diego
   - title: Awards
     items:
     - title: Schultz Award in Old Testament Studies
