Use unicode (directional) double quotes

--- a/_pages/biblical.html
+++ b/_pages/biblical.html
@@ -25,7 +25,7 @@ sections:
       desc: George Whitefield College, Cape Town, South Africa
   - title: Publications
     items:
-    - title: Review of Ian Boxall's "Discovering Mathew"
+    - title: Review of Ian Boxall's “Discovering Mathew”
       link: #
       date: 2015-01-01
       desc: Neotestamentica 49.2
