--- a/_pages/biblical.html
+++ b/_pages/biblical.html
@@ -9,7 +9,7 @@ sections:
     items:
     - title: "PhD Biblical & Theological Studies: Old Testament"
       link: #
-      altdate: (in progress)
+      altdate: 2023-05-08
       desc: Wheaton College, Wheaton, IL
     - title: MA Biblical Exegesis
       link: #
@@ -25,6 +25,18 @@ sections:
       desc: George Whitefield College, Cape Town, South Africa
   - title: Publications
     items:
+    - title: Review of Daniel E. Kim's “Rest in Mesopotamian and Israelite Literature”
+      link: https://scholarlypublishingcollective.org/psup/biblical-research/article-abstract/32/3/318/319723/Daniel-E-Kim-Rest-in-Mesopotamian-and-Israelite?redirectedFrom=fulltext
+      date: 2022-11-01
+      desc: Neotestamentica 49.2
+    - title: Scripture Index to Rabbinic Literature (Associate Editor)
+      link: #
+      date: 2021-01-01
+      desc: Hendrickson
+    - title: Review of Michael LeFebvre's “The Liturgy of Creation: Understanding Calendars in Old Testament Context”
+      link: https://scholarlypublishingcollective.org/psup/biblical-research/article-abstract/30/2/286/179639/The-Liturgy-of-Creation-Understanding-Calendars-in
+      date: 2020-06-20
+      desc: BBR 49.2
     - title: Review of Ian Boxall's “Discovering Mathew”
       link: #
       date: 2015-01-01
