--- a/_pages/biblical.html
+++ b/_pages/biblical.html
@@ -9,7 +9,7 @@ sections:
     items:
     - title: PhD Biblical & Theological Studies: Old Testament
       link: #
-      altdate: 2023-05-08
+      date: 2023-05-08
       desc: Wheaton College, Wheaton, IL
     - title: MA Biblical Exegesis
       link: #
@@ -65,7 +65,6 @@ sections:
       link: #
       date: 2016-03-11
       desc: An Investigation into the Use of ‫ירא‬ in Deuteronomy and its Correspondence with the NT Idea of Faith
-
 ---
 
 {% for section in page.sections %}
