--- a/_pages/biblical.html
+++ b/_pages/biblical.html
@@ -43,6 +43,14 @@ sections:
       desc: Neotestamentica 49.2
   - title: Conference Presentations
     items:
+    - title: "Lost in Machine Translation: A Critical Assessment of Translation as an Engineering Problem"
+      link: #
+      date: 2026-11-22
+      desc: SBL National, Boston
+    - title: "Word Made Flesh: Views of Translation through the Lens of the Lord’s Supper"
+      link: #
+      date: 2026-10-30
+      desc: BT Conference, Chiang Mai, Thailand
     - title: "Searching the Bible Using NLP: Google for the Hebrew Bible"
       link: #
       date: 2019-11-23
